# ambassador

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: lint.yml  test.yml
ambassador/: Cargo.toml
ambassador/src/: delegate_shared.rs  delegate_to_methods.rs  derive.rs  lib.rs  register.rs  util.rs
ambassador/tests/: compiletest.rs
ambassador/tests/compile-fail/: delegatable_trait.rs  delegate_self_fail.rs  delegate_to_method.rs  delegate_to_method_where.rs  delegate_to_missing_method.rs  enum_associated_constant.rs  enum_associated_types.rs  enum_gat.rs  extra_args_in_delegate_attr.rs  extra_items_in_remote_methods_impl.rs  generic_trait_bad_where.rs  method_no_self.rs  missing_delegate_attribute.rs  muti_field_struct.rs  single_field_struct.rs  taxonomy_fail.rs
ambassador/tests/run-pass/: associated_types.rs  async.rs  async_associated_enum.rs  auto_where_clause.rs  backwards_compatible.rs  cfg.rs  const_generic.rs  delegate_remote.rs  delegate_self.rs  delegate_to_method_g_and_at.rs  delegate_to_methods.rs  delegate_to_methods_dyn_works.rs  delegate_to_methods_in_trait_impl.rs  delegate_to_remote_methods.rs  delegate_to_remote_methods_on_remote_type.rs  delegate_trait_remote_display.rs  derive_and_trait_in_modules.rs  derive_in_module.rs  double_generics.rs  enum_associated_constant.rs  enum_associated_types.rs  gat.rs  generic_enum.rs  generic_method.rs  generic_struct.rs  generic_trait_any.rs  generic_trait_complex.rs  generic_trait_lifetime.rs  generic_trait_single_type.rs  generic_tuple_struct.rs  impl_future_enum.rs  inhibit_where_clause.rs  late_bound_lifetime.rs  method_mut_ref_self.rs  method_self.rs  method_single_arg.rs  muti-feature.rs  single_trait_single_method.rs  single_variant.rs  struct_field_target.rs  (+9 more)
