[package]
name = "ambassador"
version = "0.2.1"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
edition = "2018"
description = "Trait implementation delegation via procedural macros"
keywords = ["trait", "delegate", "delegation", "macros", "proc-macros"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hobofan/ambassador"
readme = "README.md"

[lib]
proc-macro = true

[features]
default = ["backward_compatible"]
backward_compatible = []

[dependencies]
syn = { version = "1.0.8", features = ["full", "extra-traits"] }
quote = "1.0.2"
proc-macro2 = "1.0.6"

[dev-dependencies]
compiletest_rs = { version = "0.3.25", features = [ "stable" ]}

[package.metadata.release]
no-dev-version = true
tag-prefix = ""
tag-name = "{{version}}"
