[package]
name = "ambassador"
version = "0.4.2"
authors = ["Maximilian Goisser <goisser94@gmail.com>", "David Ewert <dewert10@gmail.com>"]
edition = "2018"
description = "Trait implementation delegation via procedural macros"
keywords = ["trait", "delegate", "delegation", "macros", "proc-macros"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hobofan/ambassador"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.25", features = ["full", "extra-traits"] }
quote = "1.0.2"
proc-macro2 = "1.0.6"
itertools = "0.10.3"

[dev-dependencies]
compiletest_rs = "0.8"

[package.metadata.release]
no-dev-version = true
tag-prefix = ""
tag-name = "{{version}}"
